Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/ExtendArray.out
ExtendArray.java:11:40: compiler.err.type.found.req: java.lang.Object[], (compiler.misc.type.req.class)
1 error
